# code-typing

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: main.rs
src/app/: game.rs  language.rs  mod.rs  samples.rs  state.rs  syntax.rs  ui.rs
src/app/samples/: c.rs  cpp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  python.rs  rust.rs  swift.rs  typescript.rs
