[package]
name = "code-typing"
version = "0.1.4"
edition = "2021"
authors = ["Vincent Woo"]
description = "A terminal-based typing game for programmers. Practice real code snippets in 10 languages — Rust, Python, JavaScript, TypeScript, Go, Java, Kotlin, Swift, C, and C++ — while tracking WPM and accuracy."
license = "MIT"
repository = "https://github.com/wooyukit/code-typing"
homepage = "https://github.com/wooyukit/code-typing"
documentation = "https://github.com/wooyukit/code-typing#readme"
readme = "README.md"
keywords = ["typing", "game", "terminal", "programming", "practice"]
categories = ["command-line-utilities", "games"]
exclude = ["target/", ".git/", ".gitignore"]

[[bin]]
name = "code-typing"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
